[tool.poetry]
name = "csci425fa23"
version = "0.1.0"
description = ""
authors = ["Robert Evans <robertevans@robertevansmb.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.10.3"
sqlalchemy = "^2.0.9"
mysqlclient = "^2.1.1"
pytest = "^7.3.0"
pytest-html = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
